docs: review 내용 반영

--- a/docs/1-2/2.orm.md
+++ b/docs/1-2/2.orm.md
@@ -115,3 +115,16 @@ JpaRepository는 기본 CRUD, 페이징/정렬을 자동 제공하며,
 5. ResultSet → 엔티티로 매핑되어 Repository → Service로 반환
 6. 커밋 시점 Dirty Checking으로 변경 SQL 자동 실행
 
+
+
+### JpaRepository를 상속받은 클래스에 Repository 어노테이션을 붙이지 않는 이유
+
+`@Repository`는 원래 구체 클래스(수동 DAO)에 붙여 컴포넌트 스캔과 예외 번역을 활성화 하는 용도로 쓰이기 때문에 
+인터페이스에는 이를 붙여도 의미가 없다.
+
+Spring Data가 `@EnableJpaRepositories`(또는 Spring Boot 자동 설정)로 리포지토리 프록시 빈을 자동 등록하고, 
+예외 번역까지 붙여주기 때문에 `@Repository`를 추가해도 추가되는 기능이 없으며, **직접 JPA(EntityManager), JDBC등을 사용하는 수동 구현 DAO나 리포지토리 클래스에서 사용한다.**
+
+
+
+
