--- a/docs/1-2/2.orm.md
+++ b/docs/1-2/2.orm.md
@@ -65,6 +65,8 @@ JPA 구성 요소는 다음과 같다.
 - Persistence Context : 엔티티를 1차 캐시로 관리하는 논리적인 저장소.
 - Spring Data JPA Repository : JpaRepository를 상속받아 CRUD 기능 제공.
 - Transaction : `@Transactional`을 통해 트랜잭션 경계를 관리.
+    - 정합성을 지키기 위해 Transactional 사용(commit, rollback)
+    - readonly 옵션을 통해 더티체킹 비활성화 및 성능 최적화 등의 이점을 챙길 수 있다.
 
 보통 Entity + Repository + Service를 작성하고, EntityManager를 직접 다루는 일은 잘 없다.
 
