--- a/docs/2-1/2.REST_API.md
+++ b/docs/2-1/2.REST_API.md
@@ -10,7 +10,7 @@
 REST의 제약을 따르는 설계를 말한다.
 
 REST에서 가장 중요한 규칙은 다음의 2가지이다.
-- **URI로 정보의 자원을 표현(명사형)**
+- **URI로 정보의 자원을 표현(명사형 & 소문자 복수형)**
 - **자원에 대한 행위는 HTTP Method(GET, POST, PUT, DELETE..)로 표현**
 
 이에 대해 세부 규칙으로 다음과 같은 내용이 있다.
@@ -42,3 +42,5 @@ HTTP 메서드 및 상태코드는 다음과 같이 정리할 수 있다.
     - 201 Created(+Location 헤더)
     - 204 No Content
     - 400/401/403/404/409/412/415/422/429/500 등
+
+> 항상 따르지는 못하지만 Restful하기 위해 노력한다고 생각하면 된다.
