--- a/docs/2-1/3.serialize.md
+++ b/docs/2-1/3.serialize.md
@@ -4,6 +4,18 @@
   >    - ObjectMapper의 작동방식
 >    - `@RequestBody`와 `@ModelAttribute`는 어떤 차이가 있을까?
 
+## Controller의 메소드 내 아무런 어노테이션이 없을 때 스프링은 이 값들을 어떻게 처리할까
+| 파라미터 타입                                                     | Spring MVC 기본 처리 방식                                 |
+| ----------------------------------------------------------- | --------------------------------------------------- |
+| **도메인 객체(POJO, DTO 클래스 등)**                                 | `@ModelAttribute` 로 처리 → 요청 파라미터 바인딩                |
+| **기본형(Primitive), Wrapper, String 등 단순 타입**                 | `@RequestParam` 로 처리 → QueryString/Form Field 바인딩   |
+| **HttpServletRequest, Response, InputStream 등 웹 API 관련 타입** | 해당 객체 그대로 주입 (`@RequestParam/@ModelAttribute` 적용 X) |
+| **Map, Model, ModelMap**                                    | 모델을 위한 객체로 처리 → View로 전달됨                           |
+| **@RequestBody 생략 불가인 경우**                                  | JSON 요청 Body는 자동 처리되지 않음 → 반드시 `@RequestBody` 필요    |
+
+
+
+
 ## 객체의 직렬화 역직렬화
 > - 직렬화:  프로그램 내부에서 사용하는 객체나 데이터를 다른 프로그램에 전달하여 사용할 수 있도록 데이터의 형태를 바이트 (Byte) 형태로 변환하는 것을 의미한다.
 > - 역직렬화: 바이트 형태로 받은 정보를 프로그램 내에서 다루는 것이 가능한 객체 형태로 다시 변환하는 것을 의미한다.
@@ -26,6 +38,7 @@
 ### `@RequestBody` vs `@ModelAttribute`
 `@RequestBody`와 `@ModelAttribute`는 클라이언트 측에서 보낸 데이터를 Java 코드에서 사용할 수 있는 오브젝트로 만들어주는 공통점이 있다. 하지만 두 애너테이션은 세부 수행 동작에서 큰 차이를 보인다. 
 `@RequestBody`
+- `application/json`을 지원
 - HTTP 요청 바디로 부터 받아온다.
 - JSON/XML API 바디를 객체로 받는 경우 `HttpMessageConverter`가 역직렬화한다. (ex. JSON -> POJO)
   - `HttpMessageConverter` :  직렬화, 역직렬화 과정에서 사용하는 핵심 컴포넌트
@@ -33,10 +46,11 @@
 - RequestBody를 사용할 객체는 필드를 바인딩할 **생성자나 setter 메서드는 필요 없지만 기본 생성자는 필요**하다. + 바인딩을 위한 필드명을 알아내기 위해 getter나 setter중 1가지는 정의되어 있어야 한다. 
 
 `@ModelAttribute`
-- 요청 파라미터(query string, application/x-www-form-urlencoded 폼 필드, multipart/form-data 의 텍스트 필드)로 부터 데이터를 받아온다.
+- 요청 파라미터(query string, application/x-www-form-urlencoded 폼 필드, `multipart/form-data` 의 텍스트 필드)로 부터 데이터를 받아온다.
 - 스프링의 WebDataBinder를 통해 자바빈 프로퍼티에 바인딩한다.
 - 주로 폼 전송, 검색 조건에 대한 DTO, 쿼리 파라미터 바인딩 등에 쓰인다.
 - `@Valid`와 BindingResult를 통해 검증 오류를 담아 컨트롤러까지 전달한다.
+- setter 없이도 직렬화 역직렬화 가능
 
 
 ## 스프링에서 객체 직렬화와 역직렬화
@@ -64,3 +78,6 @@ JSON ↔ Java 객체 변환을 수행하게 된다.
 | -------------------- | ---------------------------------- |--------------------------------|
 | **직렬화 (객체 → JSON)**  | Getter 메서드               | JSON 변환 시 getter로 필드 값을 찾아 직렬화 |
 | **역직렬화 (JSON → 객체)** | 기본 생성자 또는 `@JsonCreator`, 필드 접근 가능 | 객체 생성 후 Reflection으로 값 주입      |
+
+---
+DTO에 Getter가 들어가는 이유는 직렬화/역직렬화 때문
