--- a/docs/2-1/4.ResponseEntity.md
+++ b/docs/2-1/4.ResponseEntity.md
@@ -32,3 +32,6 @@ return ResponseEntity
 
 ### 사용하는 이유
 ResponseEntity를 통해 상태 코드, 헤더, 바디를 설정을 직접 세밀하게 조정하고 반환할 수 있기 때문에, 클라이언트 측이 보낸 요청에 대해 RESTful한 API를 작성할 수 있다.
+
+---
+> 간단한 프로젝트는 ResponseEntity를 최대한 활용해라
